--- a/.github/workflows/Build_OpenWrt_Redmi-AX6_plus.yml
+++ b/.github/workflows/Build_OpenWrt_Redmi-AX6_plus.yml
@@ -72,11 +72,14 @@ jobs:
         #git clone --depth 1 $REPO_URL -b $REPO_BRANCH openwrt
         ln -sf /workdir/openwrt $GITHUB_WORKSPACE/openwrt
         cd openwrt
-        git reset --hard 26f3634631244eedfbdfd61ea6cc3a2d7f5d896f
+        #git reset --hard 26f3634631244eedfbdfd61ea6cc3a2d7f5d896f
         useVersionInfo=$(git show -s --date=short --format="提交人: %an<br/>提交时间: %cd<br/>提交内容: %s<br/>commit hash: %H")
         echo "useVersionInfo=$useVersionInfo" >> $GITHUB_ENV
         echo "DATE=$(date "+%Y-%m-%d %H:%M:%S")" >> $GITHUB_ENV
         echo "DATE1=$(date "+%Y-%m-%d")" >> $GITHUB_ENV
+        
+    - name: revert mac80211:update to v6.1.24
+      run: cp -rf $GITHUB_WORKSPACE/general/revert_mac80211/package/kernel/* openwrt/package/kernel/
         
     - name: Revert ax6
       run: cp -rf $GITHUB_WORKSPACE/general/AX6/target/linux/ipq807x/image/generic.mk openwrt/target/linux/ipq807x/image/
